--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Website</title>
+    <title>Lorendos Portfolio</title>
     <link rel="stylesheet" href="css/index.css">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
   </head>
   <body>
     <main>
-        <h1>Well cum</h1>  
+        <h1>Test</h1>  
     </main>
 	<script src="index.js"></script>
   </body>
